--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -28,4 +28,23 @@
 .pagination{
     text-align: center;
     margin-bottom: 40px;
+    margin-left: 5px;
+}
+.pagination .selected{
+    background-color: orange;
+    
+}
+#next{
+    background-color: gray;
+    color: white;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+#previous{
+    background-color: gray;
+    color: white;
+    margin-left: 10px;
+    margin-right: 10px;
+    
+   
 }
